Bug 454724 - link in dialog does not open in RKWard
Summary: link in dialog does not open in RKWard
Status: RESOLVED FIXED
Alias: None
Product: rkward
Classification: Applications
Component: User Interface (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: RKWard Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-02 06:37 UTC by Jan
Modified: 2022-06-03 14:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan 2022-06-02 06:37:51 UTC
SUMMARY
Link in dialog does not open in RKWard.

STEPS TO REPRODUCE
- Settings
- Configure RKWard...
- Onscreen Graphics
- Default graphics device
- RKWard native device
- Integration of R standard devices
- Replace with RKWard device
- OK

- new script file
- plot(NULL)
- Run all

- a dialog appears
- Title: Graphics version mismatch
- Content: R Graphics Engine version has changed (from 12 to 15). This change requires a recompilation. Additional information

Additional information is a link to rkward://page/rkward_incompatible_version

- clicking the link

OBSERVED RESULT
- browser app opens
- navigating to https://html.duckduckgo.com/html?q=rkward%3A%2F%2Fpage%2Frkward_incompatible_version (duckduckgo is set as search engine in browser)

EXPECTED RESULT
Link to rkward://page/rkward_incompatible_version should be opened in RKWard.

SOFTWARE/OS VERSIONS
R version 4.2.0 (2022-04-22)
Platform: x86_64-pc-linux-gnu (64-bit)
Running under: Ubuntu 20.04.4 LTS

rkward_0.7.4
Comment 1 Thomas Friedrichsmeier 2022-06-03 14:18:28 UTC
Git commit bb25c4caff3a896f80974af45044cf18b656d87d by Thomas Friedrichsmeier.
Committed on 03/06/2022 at 14:17.
Pushed by tfry into branch 'master'.

Do not rely on rkward:// protocol to be registered system-wide for handling links from dialogs.

M  +1    -0    ChangeLog
M  +2    -0    rkward/rkward.cpp
M  +6    -0    rkward/windows/rkworkplace.cpp
M  +2    -0    rkward/windows/rkworkplace.h

https://invent.kde.org/education/rkward/commit/bb25c4caff3a896f80974af45044cf18b656d87d