Do not rely on rkward:// protocol to be registered system-wide for handling links from dialogs.

BUG: 454724