rkward/windows/rkworkplace.h
@@ -224,6 +224,8 @@ public slots:
 /** When windows are attached to the workplace, their QObject::destroyed () signal is connected to this slot. Thereby deleted objects are removed from the workplace automatically */
 	void removeWindow (QObject *window);
 	void saveSettings ();
+/** Proxy for QDesktopServices::setUrlHandler(), set from RKWardMainWindow(). Simply calls RKHTMLWindow::handleRKWardUrl(). */
+	void openRKWardUrl(const QUrl& url);
 private slots:
 	void namedWindowDestroyed (QObject *);
 	void namedWindowOwnerDestroyed (QObject *);
